--- a/src/components/ApartmentGrid.scss
+++ b/src/components/ApartmentGrid.scss
@@ -1,5 +1,6 @@
+@use"../scss/variables"as colors;
 .grid{
-  background-color: rgba(0, 0, 0,0.119);
+  background-color:colors.$grid-background-dark;
   min-height: 50vh;
   border-radius: 2rem;
   display: flex;
@@ -12,7 +13,7 @@
 @media screen and (width <= 766px){
   .grid{
       justify-content: center;
-     background-color: white;
+     background-color: colors.$grid-background-white;
      padding: 0;
   }
 }
