--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -1,6 +1,7 @@
+@use"../scss/variables"as *;
 .footer{
-    background-color: black;
-    color: white;
+    background-color:$footer-background-color;
+    color: $color-tertiary;
     padding: 20px;
     min-height: 100px;
     text-align: center;
