--- a/src/components/Apartment.scss
+++ b/src/components/Apartment.scss
@@ -1,22 +1,26 @@
+@use"../scss/variables"as *;
 .apartment{
-    background-image:linear-gradient(to top,#863535,#ff6060);
+    background-image:linear-gradient(to top,$color-secondary,$color-primary);
     border-radius: 1rem;
     flex-basis: 30%;
     display: grid;
     align-items: end;
     min-width: 200px;
     min-height: 200px;
-  }
-  @media screen and (width <= 766px){
+    @media screen and (width <= 766px){
     .apartment{
       flex-basis: 100%;
     }
   }
-  
-  .apartment__title{
+  & &__title{
       width: 50%;
-      color: white;
+      color: $color-tertiary;
       margin-inline-start: 0.5rem;
       margin-block-end: 0.5rem;
   }
+  }
+
+  
+  
+ 
   
