--- a/src/components/Apartment.scss
+++ b/src/components/Apartment.scss
@@ -17,6 +17,7 @@
       color: $color-tertiary;
       margin-inline-start: 0.5rem;
       margin-block-end: 0.5rem;
+      text-decoration: none;
   }
   }
 
